--- a/composer.json
+++ b/composer.json
@@ -1,32 +1,37 @@
 {
-  "name": "allejo/php-soda",
+  "name": "davidsierradz/php-soda",
   "description": "A PHP library for working with the Socrata API",
   "type": "library",
   "license": "MIT",
+  "repositories": [
+      {
+          "type": "vcs",
+          "url": "https://github.com/davidsierradz/PhpSoda"
+      }
+  ],
   "require": {
     "php": ">=5.6.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "~5.5",
+    "phpunit/phpunit": "~5.7",
     "phpdocumentor/phpdocumentor": "2.*"
   },
   "autoload": {
-    "classmap": [
-      "src/",
-      "tests/utilities"
-    ]
+    "psr-4": {
+        "Davidsierradz\\Socrata\\": "src/"
+    }
   },
   "authors": [
     {
-      "name": "Vladimir Jimenez",
-      "homepage": "https://allejo.io",
+      "name": "David Sierra DiazGranados",
+      "homepage": "https://github.com/davidsierradz",
       "role": "Project Maintainer"
     }
   ],
   "support": {
-    "issues": "https://github.com/allejo/PhpSoda/issues",
+    "issues": "https://github.com/davidsierradz/PhpSoda/issues",
     "irc": "irc://irc.freenode.net/socrata-soda",
     "wiki": "https://github.com/allejo/PhpSoda/wiki",
-    "source": "https://github.com/allejo/PhpSoda"
+    "source": "https://github.com/davidsierradz/PhpSoda"
   }
 }
