--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
       }
   ],
   "require": {
-    "php": ">=5.6.0"
+    "php": ">=5.6.0",
+    "illuminate/support": "~5.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~5.7",
@@ -20,6 +21,11 @@
     "psr-4": {
         "Davidsierradz\\Socrata\\": "src/"
     }
+  },
+  "autoload-dev": {
+      "psr-4": {
+          "Tests\\": "tests/"
+      }
   },
   "authors": [
     {
